--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,17 @@
 /*
 Name: Nathan Byarley
-Project:
-Term:
-Class:
+Project: Week 1
+Term: 1309
+Class: ASD
 */
+
+/* started out with adjustment to feature image. as most of this project uses jquery css */
+
+
+#top-image {
+	text-align: center;
+}
+
+#a, #b {
+	display: none;
+}
